fix scrollbar style

--- a/src/Components/MessagesList/MessagesList.module.css
+++ b/src/Components/MessagesList/MessagesList.module.css
@@ -3,3 +3,13 @@
   overflow-y: auto;
   flex-grow: 1;
 }
+
+.messagesList::-webkit-scrollbar {
+  width: 6px;
+}
+
+::-webkit-scrollbar-thumb {
+  height: 35px;
+  background-color: rgba(0, 0, 0, 0.2);
+  border-radius: 6px;
+}
